[workspace]
members = ["raw"]

[workspace.package]
version = "0.1.0"
authors = ["Lance Hart <me@lancehart.ca>"]
edition = "2021"
description = "Linux wrapper library"
repository = "https://github.com/shipsimfan/lib-linux"
license = "GPL-3.0-or-later"
publish = false

[workspace.dependencies]
raw.path = "raw"


[package]
name = "linux"

version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
raw.workspace = true
